# odoo

./: .dockerignore  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: build.yaml  main.yaml  security_check.yml
addons/mail/tests/: test_discuss_controller.py
addons/snailmail/tests/: test_attachment_access.py
addons/web_editor/static/src/js/editor/: rte.js
addons/website/models/: website_rewrite.py
docker/: 0001-pdfwrite-undo-commit-4dcfae36bb4dcbc4ef3b5e5afc98bcd.patch  Dockerfile  ghostscript_cmap_copyfix.diff
odoo/: fields.py  http.py  sql_db.py
odoo/addons/base/models/: ir_attachment.py  res_users.py
odoo/addons/base/tests/: test_mimetypes.py  test_misc.py  test_test_suite.py
odoo/cli/: shell.py
odoo/tests/: common.py
odoo/tools/: config.py
tests/: docker-compose.yml  modules  run_tests.sh
