[tool.poetry]
package-mode = false
name = "odoo"
version = "14.0.14.2"
description = "Odoo"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "~=3.8"

[tool.poetry.group.odoo.dependencies]
babel = {version = "2.6.0", markers = "python_version <= \"3.9\""}
chardet = "3.0.4"
decorator = "4.3.0"
docutils = "0.14"
ebaysdk = "2.1.5"
freezegun = {version = "0.3.15", markers = "python_version >= \"3.8\""}
gevent = {version = "20.12.0", markers = "python_version > \"3.7\" and python_version <= \"3.9\""}
greenlet = {version = "0.4.17", markers = "python_version > \"3.7\" and python_version <= \"3.9\""}
idna = "2.6"
jinja2 = {version = "2.11.2", markers = "python_version >= \"3.8\""}
libsass = "0.17.0"
lxml = {version = "4.6.5", markers = "sys_platform != \"win32\" and python_version > \"3.7\""}
mako = "1.0.7"
markupsafe = "1.1.0"
num2words = "0.5.6"
ofxparse = {version = "0.19", markers = "python_version <= \"3.9\""}
passlib = "1.7.1"
pillow = {version = "8.1.1", markers = "python_version > \"3.7\""}
polib = "1.1.0"
psutil = "5.6.6"
psycopg2 = {version = "2.8.5", markers = "sys_platform == \"win32\" or python_version >= \"3.8\""}
pydot = "1.4.1"
python-ldap = {version = "3.1.0", markers = "sys_platform != \"win32\""}
pypdf2 = "1.26.0"
pyserial = "3.4"
python-dateutil = "2.7.3"
pytz = "^2024.1"
pyusb = "1.0.2"
qrcode = "6.1"
reportlab = {version = "3.5.55", markers = "python_version >= \"3.8\""}
requests = {version = "2.21.0", markers = "python_version <= \"3.9\""}
zeep = "3.2.0"
python-stdnum = "1.8"
vobject = "0.9.6.1"
werkzeug = {version = "0.16.1", markers = "python_version <= \"3.9\""}
xlsxwriter = "1.1.2"
xlwt = "==1.3.*"
xlrd = {version = "1.2.0", markers = "python_version >= \"3.8\""}
python-magic = "0.4.27"
cairocffi = "0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

