[tool.poetry]
name = "odoo"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.odoo.dependencies]
babel = "2.16.0"
chardet = "3.0.4"
cryptography = "2.6.1"
decorator = "4.4.2"
docutils = "0.16"
ebaysdk = "2.1.5"
freezegun = "0.3.15"
gevent = "21.8.0"
greenlet = "1.1.2"
idna = "2.8"
Jinja2 = "2.11.3"
libsass = "0.18.0"
lxml = "4.6.5"
MarkupSafe = "1.1.0"
num2words = "0.5.6"
ofxparse = "0.21"
passlib = "1.7.3"
Pillow = "10.4.0"
polib = "1.1.0"
psutil = "5.6.7"
psycopg2 = "2.8.6"
pydot = "1.4.1"
pyopenssl = "19.0.0"
PyPDF2 = "1.26.0"
pyserial = "3.4"
python-dateutil = "2.7.3"
python-ldap = "3.4.0"
python-stdnum = "1.13"
pyusb = "1.0.2"
qrcode = "6.1"
reportlab = "3.6.13"
requests = "2.25.1"
urllib3 = "1.26.5"
vobject = "0.9.6.1"
Werkzeug = "2.0.2"
xlrd = "1.2.0"
XlsxWriter = "1.1.2"
xlwt = "1.3.0"
zeep = "3.4.0"
python-magic = "0.4.27"
cairocffi = "0.9.0"
pytz = "^2024.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
