[tool.poetry]
name = "odoo"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.odoo.dependencies]
babel = "2.16.0"
chardet = "3.0.4"
decorator = "4.3.0"
docutils = "0.14"
ebaysdk = "2.1.5"
freezegun = {version = "0.3.15", markers = "python_version >= \"3.8\""}
gevent = "23.9.1"
greenlet = "3.1.0"
idna = "2.6"
jinja2 = "2.11.3"
libsass = "0.17.0"
lxml = "4.9.4"
mako = "1.3.5"
markupsafe = "2.1.5"
num2words = "0.5.6"
ofxparse = {version = "0.19", markers = "python_version <= \"3.9\""}
passlib = "1.7.1"
pillow = "10.4.0"
polib = "1.1.0"
psutil = "5.6.6"
psycopg2 = {version = "2.8.5", markers = "sys_platform == \"win32\" or python_version >= \"3.8\""}
pydot = "1.4.1"
python-ldap = "3.4.4"
pypdf2 = "1.27.12"
pyserial = "3.4"
python-dateutil = "2.7.3"
pytz = "^2024.1"
pyusb = "1.0.2"
qrcode = "6.1"
reportlab = "3.6.13"
requests = "2.32.3"
zeep = "3.2.0"
python-stdnum = "1.8"
vobject = "0.9.6.1"
werkzeug = "3.0.4"
xlsxwriter = "1.1.2"
xlwt = "==1.3.*"
xlrd = {version = "1.2.0", markers = "python_version >= \"3.8\""}
python-magic = "0.4.27"
cairocffi = "0.9.0"
urllib3 = "1.26.20"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

